# evn-power-sync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync-evn-data.yml  sync-schedule.yml
config/: locations.json.example
docs/: app.js  index.html  styles.css
docs/data/: area_index.json  locations.json  schedule.json
evn_power_sync/: area_index.py  cli.py  gui.py  hcmc.py  locations_store.py  models.py  spc.py
scripts/: setup-github-pages.ps1
tests/: test_area_index.py  test_core.py  test_export.py  test_export_data.py  test_live_random.py  test_locations_store.py
