[project]
name = "evn-power-sync"
version = "0.1.0"
description = "CLI and Tkinter GUI for EVNHCMC/EVNSPC outage schedule lookup."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
evn-power-sync = "evn_power_sync.cli:main"
evn-power-sync-gui = "evn_power_sync.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["evn_power_sync*"]
